...
        // 3 adiciona os atributos a classe persistente
        location.setValue(self.singleLocation?.name, forKeyPath: "name")
        location.setValue(self.singleLocation?.longitude, forKeyPath: "longitude")
        location.setValue(self.singleLocation?.latitude, forKeyPath: "latitude")
       
        
        if(self.addRemoveButton.currentTitle == "Save"){
            // 4 salva a entidade no contexto
            do {
                try
                    managedContext.save()
                    locationsCoreData.append(location)
                    printCoreDataMessage(stringTitle: "Success", stringError: "Location succesfully saved")
...
                    //deleta o botao que adiciona o placemarker, para nao permitir o usuario salvar o mesmo objeto.
                    self.addRemoveButton.setTitle("Save", for: UIControlState.normal)
                } catch let error as NSError{
                    self.printCoreDataMessage(stringTitle: "Error", stringError: "Could not save. \(error), \(error.userInfo)")
                }
            }))
            alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: { (action) in
                //execute some code when this option is selected
            }))
            self.present(alert, animated: true, completion: nil)
        }
        
    }
...
