...
  
  
  // MARK: - View Setup
  override func viewDidLoad() {
    super.viewDidLoad()
    
    self.tableView.accessibilityIdentifier = "TableVC_Table"
    
    if let splitViewController = splitViewController {
      let controllers = splitViewController.viewControllers
      detailViewController = (controllers[controllers.count-1] as! UINavigationController).topViewController as? DetailViewController
    }
    
...
    searchController.obscuresBackgroundDuringPresentation = false
    searchController.searchBar.placeholder = "Search On Google Maps"
    navigationItem.searchController = searchController
    definesPresentationContext = true
    searchController.becomeFirstResponder()
    searchController.searchBar.delegate = self
    searchController.searchBar.accessibilityIdentifier = "SearchBar"
    

    
    // Setup the search footer
    //A view do footer da searchBar será o botão "display all results" para redirecionar para pagina seguinte
    let eventoToqueFooterResultados = UITapGestureRecognizer(target: self, action:  #selector (self.displayAllLocations (_:)))
...
